Implemented the user end points